update examples and readme for sets and maps